from server lattice almost done

--- a/src/carla_ros_bridge/carla_spawn_objects/src/carla_spawn_objects/set_autopilot.ipynb
+++ b/src/carla_ros_bridge/carla_spawn_objects/src/carla_spawn_objects/set_autopilot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,47 @@
      "text": [
       "vehicle.mercedes.coupe\n",
       "vehicle.tesla.model3\n",
+      "vehicle.tesla.model3\n",
       "vehicle.tesla.model3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Traffic sign 1023 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1022 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1021 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1019 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1017 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1020 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1016 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1018 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1023 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1022 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1021 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1019 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1017 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1020 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1016 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: Traffic sign 1018 overlaps a driving lane. Moving out of the road... \n",
+      "WARNING: Failed to find suitable place for signal. \n",
+      "WARNING: No InMemoryMap cache found. Setting up local map. This may take a while... \n"
      ]
     },
     {
@@ -67,11 +107,30 @@
     }
    ],
    "source": [
+    "traffic_manager = client.get_trafficmanager(8000)\n",
+    "traffic_manager.set_random_device_seed(12)\n",
+    "# # tm里的每一辆车都要和前车保持至少3m的距离来保持安全\n",
+    "# traffic_manager.set_global_distance_to_leading_vehicle(3.0)\n",
+    "# # tm里面的每一辆车都是混合物理模式\n",
+    "# # traffic_manager.set_hybrid_physics_mode(False)\n",
+    "# # tm里面每一辆车都是默认速度的80%\n",
+    "traffic_manager.global_percentage_speed_difference(66)\n",
+    "\n",
+    "# settings = world.get_settings()\n",
+    "# traffic_manager.set_synchronous_mode(True)\n",
+    "# if not settings.synchronous_mode:\n",
+    "#     synchronous_master = True\n",
+    "#     settings.synchronous_mode = True\n",
+    "#         # 20fps\n",
+    "#     settings.fixed_delta_seconds = 0.05\n",
+    "#     world.apply_settings(settings)\n",
+    "\n",
     "for vehicle in world.get_actors().filter('*vehicle*'):\n",
-    "    \n",
-    "    # print(i)\n",
     "    print(vehicle.type_id)\n",
     "    if vehicle.type_id != \"vehicle.mercedes.coupe\":\n",
+    "        traffic_manager.auto_lane_change(vehicle, False)\n",
+    "        traffic_manager.set_route(vehicle, ['Straight', 'Straight','Straight','Straight','Straight','Straight'])\n",
+    "        # traffic_manager.set_desired_speed(vehicle, 10.0)\n",
     "        vehicle.set_autopilot(True)"
    ]
   },
@@ -171,7 +230,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2.79*3.6\n"
+   ]
   }
  ],
  "metadata": {
